--- a/IoTHub/index.html
+++ b/IoTHub/index.html
@@ -4,6 +4,7 @@
     <title>IoT Hub</title>
 	<meta charset="utf-8" />
     <link href="Lib/bootstrap.css" rel="stylesheet" />
+    <link href="Styles/site.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
@@ -14,5 +15,6 @@
     <script src="Scripts/jquery.signalR-2.1.2.js"></script>
     <script src="Lib/react.js"></script>
     <script src="Scripts/devices.js"></script>
+    <script src="Scripts/uptime.js"></script>
 </body>
 </html>
